deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ai-silabusi-api
  labels:
    app: ai-silabusi-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ai-silabusi-api
  template:
    metadata:
      labels:
        app: ai-silabusi-api
    spec:
      containers:
      - name: ai-silabusi-api
        image: hljubic/api-silabusi-ai.sum.ba:1.0.6
        ports:
        - containerPort: 8000
