service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ai-pomocnik-ednevnik-api-service
spec:
  selector:
    app: ai-pomocnik-ednevnik-api
  ports:
  - protocol: TCP
    port: 80
    targetPort: 5000
  type: ClusterIP
