ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ai-silabusi-api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: public
    nginx.ingress.kubernetes.io/proxy-read-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-connect-timeout: "360"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "360"
spec:
  rules:
  - host: api-silabusi-ai.sum.ba  # Zamijenite s vašom domenom ili koristite lokalno testiranje
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ai-silabusi-api-service
            port:
              number: 80

  tls:
    - hosts:
        - api-silabusi-ai.sum.ba
      secretName: letsencrypt-prod-api-ai-silabusi
